compiler/src/test/resources/amyc/execution/failing/ShortCircuit.grading.amy
object ShortCircuit
  false || error("")
end ShortCircuit
